--- a/css/display.css
+++ b/css/display.css
@@ -1055,8 +1055,4 @@
         grid-template-columns: 1fr;
       }
 
-      .countdown-layout {
-        display: grid;
-        grid-template-columns: repeat(2, minmax(0, 1fr));
-      }
     }
